fixed spacing in navbar modal and made it full screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,10 +109,10 @@ h4 {
 #navbar-modal{
 
 	background-color: rgb(250, 250, 250);
-	border-left: .5em solid;
-	position: fixed;
-	top: 1.5em;
+	height: 100%;
 	left: -110%;
+	position: fixed;
+	top: 2.5em;
 	width: 100%;
 	z-index: 1;
 
@@ -126,6 +126,7 @@ h4 {
 
 #navbar-text-container{
 
+	border-left: .5em solid;
 	padding:0em 1em 0em .25em;
 
 }
@@ -133,7 +134,7 @@ h4 {
 #sticky-header{
 
 	background-color: rgb(250, 250, 250);
-	padding: .5em .5em 0em .5em;
+	padding: 1em .5em 1em .5em;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -144,20 +145,21 @@ h4 {
 #sticky-header-righthand-container{
 
 	float: right;
-	width: 7em;
+	width: 8em;
 
 }
 
 #sticky-header-righthand-leftmost-text{
 
 	float: left;
-	padding-right: .5em;
+	padding-right: 1em;
 
 }
 
 #sticky-header-righthand-righttmost-text{
 
 	float:right;
+	padding-right: .5em;
 
 }
 
@@ -218,7 +220,7 @@ h4 {
 	
 	border-left: 0.1em solid;
 	display: block;
-	padding: .25em 0em .25em .25em;
+	padding: .5em 0em .25em .25em;
 	text-decoration: none;
 
 }
@@ -227,7 +229,7 @@ h4 {
 	
 	border-left: 0.1em solid;
 	display: block;
-	padding: .25em 0em 0em .25em;
+	padding: .5em 0em 0em .25em;
 	text-decoration: none;
 
 }
